# sa3-native-lab

./: .gitignore  README.md  README.stable-audio-3.md  latent-audio-research-notes.md  latent-memory-composition-primitives.md  neural-audio-evolution-timeline.md  neural-audio-math-methods-creative-tech.md  pyproject.toml  run_gradio.py
colab/: sa3_latent_interface.py  sa3_medium_l4_latent_memory.py  sa3_medium_l4_runbook.md  sa3_native_research_programs.ipynb  sa3_native_science_lab.ipynb  sa3_same_native_experimental_modes.ipynb
docs/: app-engine-triage-loop.md  app-overview.md  architecture-horizon.md  codebase-review.md  codex_skills.md  colab-capability-map.md  colab-parity-matrix.md  control-plane-architecture.md  implementation-readiness.md  improvement-roadmap.md  product-rescue-brief.md  visual-design-grammar.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
latent_audio_primitives/: README.md  __init__.py  activation_steering.py  audio_descriptors.py  audio_vectors.py  colab_audio_player.py  composition.py  control_lane_probes.py  control_lanes.py  controls.py  cross_attention_bias.py  curriculum.py  experiment_suites.py  flow_prompt.py  geometry.py  guidance.py  index.py  internal_features.py  io.py  latent_blur.py  latent_constraints.py  latent_dsp.py  latent_math.py  latent_reverb.py  looping.py  manifold_mapping.py  measurement_recipes.py  musical_mapping.py  observability.py  periodic.py  prompt_optimization.py  prompt_pairs.py  prompt_semantics.py  research_programs.py  residual_features.py  residual_probes.py  sampler_composition.py  schema.py  selective_renoise.py  style.py  (+4 more)
scripts/: _runtime.py  build_positive_audio_style_profile.py  build_sa3_same_native_notebook.py  build_same_style_profile.py  create_playback_session_fixture.py  encode_dataset_same.py  extract_audio_residual_vectors.py  extract_audio_style_vectors.py  extract_sa3_vectors.py  generate_sa3_with_audio_direction.py  generate_sa3_with_soft_prompt.py  generate_sa3_with_style_direction.py  generate_sa3_with_style_profile.py  optimize_sa3_soft_prompt.py  pre_encode_dataset.py  run_sa3_alpha_sweep.py  train_lora.py  validate_colab_notebook.py
stable_audio_3/: cli.py  model.py  verbose.py
tests/: test_app_engine.py  test_audio_chunks.py  test_audio_descriptors.py  test_audio_residual_vectors.py  test_audio_vectors.py  test_audioscope_sa3_adapter.py  test_colab_audio_player.py  test_composition.py  test_control_lanes.py  test_curriculum.py  test_dev_runner.py  test_flow_prompt.py  test_geometry.py  test_guidance.py  test_index.py  test_io_and_experiments.py  test_latent_blur.py  test_latent_dsp.py  test_latent_math.py  test_looping.py  test_observability.py  test_periodic.py  test_prompt_optimization.py  test_residual_features.py  test_selective_renoise.py  test_soft_prompt.py  test_stable_audio3_adapter.py  test_style.py  (+1 more)
(+252 files in other folders)
