[project]
name = "sa3-native-lab"
version = "0.1.0"
description = "Stable Audio 3 plus SAME/SA3 native latent steering and research primitives."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "einops>=0.8.2",
  "einops-exts>=0.0.4",
  "numpy==2.2.6",
  "packaging>=26.0",
  "safetensors>=0.7.0",
  "torch==2.7.1",
  "torchaudio==2.7.1",
  "tqdm>=4.67.3",
  "huggingface-hub>=1.7.1",
  "transformers>=5.8.0",
  "soundfile>=0.13.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["latent_audio_primitives"]

[tool.hatch.build.targets.sdist]
include = [
  "latent_audio_primitives",
  "colab",
  "docs",
  "README.md",
]
